  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/11 orbeckst
        * 0.7.2 development
	* loading from a PDB sets segid to the chain id if it exists
	* fixed bug in (experimental) phi and psi selections
	* aliased segment.name to segment.id
	* fixed bugs in reading of unit cells (Issue 60, Issue 61, Issue 34)

02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
        * 0.7.1 release
        * online documentation
        * AMBER topology and trj capabilities (netcdf not yet available)
        * PQR file reading support
        * new analysis.contacts.ContactAnalysis1 class that supports a
	  native contact analysis between arbitrary groups     
        * new examples (e.g. peptide helix clustering in a membrane)
	* fixed Issue 58 (align.rms_fit_trj; fix reported by Joshua
  	  Adelman)
	* new analysis module 'density': creation and analysis of volume data
        * fast RMSD aligner based on Douglas Theobald's QCP method for
	  calculating the minimum RMSD between two structures and
	  determining the optimal least-squares rotation matrix;
	  replaces the slower previous code (implemented by Joshua Adelman from
	  his pyqcprot package https://github.com/synapticarbors/pyqcprot);
	  deprecated core.rms_fitting.rms_rotation_matrix() and scheduled for
          removal in 0.8
        * uses cython instead of pyrex

11/05/10 orbeckst, denniej0, tyler.je.reddy, danny.parton, joseph.goose
        * major release 0.7.0
          (includes changes that can BREAK BACKWARDS COMPATIBILITY)
        * Removed ALL DEPRECATED code:
	  - AtomGroup.principleAxes (Issue 33)
	  - DCD.DCDReader.dcd_header() and DCD.DCDWriter.dcd_header()
	    (use _dcd_header())
          - Universe.dcd (and Universe.xtc, Universe.trr...) --- from